--- a/example/pom.xml
+++ b/example/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>beans</artifactId>
+    <artifactId>example</artifactId>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
@@ -19,12 +19,12 @@
     <dependencies>
         <dependency>
             <groupId>com.amit</groupId>
-            <artifactId>commons</artifactId>
+            <artifactId>context</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.amit</groupId>
-            <artifactId>core</artifactId>
+            <artifactId>commons</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
