--- a/aop/pom.xml
+++ b/aop/pom.xml
@@ -3,19 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>com.amit</groupId>
+        <artifactId>mini-spring-framework</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
-    <groupId>com.amit</groupId>
-    <artifactId>mini-spring-framework</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
-    <modules>
-        <module>core</module>
-        <module>beans</module>
-        <module>context</module>
-        <module>commons</module>
-        <module>example</module>
-        <module>aop</module>
-    </modules>
+    <artifactId>aop</artifactId>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
